welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:13: error: '<-' expected but ')' found.
  for ( j <=i to nums.length-1){
                              ^max2Value:19: error: illegal start of simple expression
} 
^